--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .align-element {
-    @apply mx-auto max-w-screen-2xl px-8;
+    @apply mx-auto max-w-screen-xl px-8;
   }
 }
